--- a/templates/settings.html
+++ b/templates/settings.html
@@ -225,17 +225,21 @@
                 </div>
             </div>
             <div class="tab-pane fade" id="other" role="tabpanel" aria-labelledby="other-tab">
-                <div class="form-group mt-3">
-                    <label>Mot de passe MySQL:</label>
-                    <input type="password" class="form-control" name="mysql_password" value="{{ contacts.mysql_password }}">
+                <div class="form-group">
+                    <label>Token Internet.bs:</label>
+                    <input type="text" class="form-control" name="internetbs_token" value="{{ contacts.internetbs_token }}">
                 </div>
                 <div class="form-group">
-                    <label>Token API de test:</label>
-                    <input type="text" class="form-control" name="testapi_token" value="{{ contacts.testapi_token }}">
+                    <label>Mot de passe Internet.bs:</label>
+                    <input type="text" class="form-control" name="internetbs_password" value="{{ contacts.internetbs_password }}">
                 </div>
                 <div class="form-group">
-                    <label>Secret API de test:</label>
-                    <input type="text" class="form-control" name="testapi_secret" value="{{ contacts.testapi_secret }}">
+                    <label>Nom d'utilisateur GitHub:</label>
+                    <input type="text" class="form-control" name="github_username" value="{{ contacts.github_username }}">
+                </div>
+                <div class="form-group">
+                    <label>Token GitHub:</label>
+                    <input type="password" class="form-control" name="github_token" value="{{ contacts.github_token }}">
                 </div>
                 <div class="form-group">
                     <label>Mode test:</label>
