--- a/templates/settings.html
+++ b/templates/settings.html
@@ -225,21 +225,33 @@
                 </div>
             </div>
             <div class="tab-pane fade" id="other" role="tabpanel" aria-labelledby="other-tab">
-                <div class="form-group">
-                    <label>Token Internet.bs:</label>
-                    <input type="text" class="form-control" name="internetbs_token" value="{{ contacts.internetbs_token }}">
+                <div class="row mt-3">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Token Internet.bs:</label>
+                            <input type="text" class="form-control" name="internetbs_token" value="{{ contacts.internetbs_token }}">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Mot de passe Internet.bs:</label>
+                            <input type="text" class="form-control" name="internetbs_password" value="{{ contacts.internetbs_password }}">
+                        </div>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label>Mot de passe Internet.bs:</label>
-                    <input type="text" class="form-control" name="internetbs_password" value="{{ contacts.internetbs_password }}">
-                </div>
-                <div class="form-group">
-                    <label>Nom d'utilisateur GitHub:</label>
-                    <input type="text" class="form-control" name="github_username" value="{{ contacts.github_username }}">
-                </div>
-                <div class="form-group">
-                    <label>Token GitHub:</label>
-                    <input type="password" class="form-control" name="github_token" value="{{ contacts.github_token }}">
+                <div class="row mt-3">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Nom d'utilisateur GitHub:</label>
+                            <input type="text" class="form-control" name="github_username" value="{{ contacts.github_username }}">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Token GitHub:</label>
+                            <input type="password" class="form-control" name="github_token" value="{{ contacts.github_token }}">
+                        </div>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label>Mode test:</label>
