update utils.py and add_domain.html update add_domain.html

--- a/templates/add_domain.html
+++ b/templates/add_domain.html
@@ -103,7 +103,7 @@
         { name: 'setupSSL', func: setupSSL },
         { name: 'installWordPress', func: installWordPress },
         { name: 'initializeGitRepo', func: initializeGitRepo },
-        //{ name: 'deployStatic', func: deployStatic }
+        { name: 'deployStatic', func: deployStatic }
     ];
 
     let currentStepIndex = 0;
