--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,9 @@
                     <a class="nav-link" href="{{ url_for('editor') }}">Rédiger un article</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('deployments') }}">Déploiements</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('settings') }}">Paramètres</a>
                 </li>
             </ul>
