--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
 {% block content %}
 <div class="container mt-5">
     <h2 class="mb-4">Monitoring des sites</h2>
+    <p class="text-muted">Dernière actualisation: {{ last_update }}</p>
     <div class="row">
         {% for site in sites %}
         <div class="col-md-4 mb-4">
