--- a/templates/settings.html
+++ b/templates/settings.html
@@ -257,6 +257,10 @@
                     <label>Mode test:</label>
                     <input type="checkbox" class="form-control" name="test_mode" {% if contacts.test_mode %}checked{% endif %}>
                 </div>
+                <div class="form-group">
+                    <label>Mot de passe administrateur:</label>
+                    <input type="password" class="form-control" name="admin_password" value="{{ settings.admin_password }}">
+                </div>
             </div>
         </div>
         <button type="submit" class="btn btn-primary mt-3">Enregistrer</button>
