update routes.py and settings.html

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -259,7 +259,7 @@
                 </div>
                 <div class="form-group">
                     <label>Mot de passe administrateur:</label>
-                    <input type="password" class="form-control" name="admin_password" value="{{ settings.admin_password }}">
+                    <input type="password" class="form-control" name="admin_password" value="{{ contacts.admin_password }}">
                 </div>
             </div>
         </div>
