--- a/templates/deployments.html
+++ b/templates/deployments.html
@@ -6,7 +6,7 @@
 <div class="container mt-5">
     <h2 class="mb-4">Historique des déploiements</h2>
     <div class="table-responsive">
-        <table class="table table-striped">
+        <table id="deploymentsTable" class="table table-striped">
             <thead>
                 <tr>
                     <th>Domaine</th>
@@ -28,4 +28,18 @@
         </table>
     </div>
 </div>
+
+<!-- Include DataTables CSS and JS -->
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
+
+<script>
+    $(document).ready(function() {
+        $('#deploymentsTable').DataTable({
+            "language": {
+                "url": "//cdn.datatables.net/plug-ins/1.11.5/i18n/French.json"
+            }
+        });
+    });
+</script>
 {% endblock %}
