--- a/templates/deployments.html
+++ b/templates/deployments.html
@@ -28,6 +28,7 @@
         </table>
     </div>
 </div>
+{% endblock %}
 
 {% block extra_css %}
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
