--- a/templates/deployments.html
+++ b/templates/deployments.html
@@ -35,11 +35,11 @@
 {% endblock %}
 
 {% block scripts %}
-<script type="text/javascript" charset="utf8"
-    src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 <script>
-    $(document).ready(function () {
+    $(document).ready(function() {
         $('#deploymentsTable').DataTable({
+            "order": [[2, "desc"]],
             "language": {
                 url: '//cdn.datatables.net/plug-ins/2.0.8/i18n/fr-FR.json',
             }
