--- a/templates/settings.html
+++ b/templates/settings.html
@@ -223,6 +223,8 @@
                     <label>Code postal:</label>
                     <input type="text" class="form-control" name="billing_postalCode" value="{{ contacts.billing.postalCode }}">
                 </div>
+            </div>
+            <div class="tab-pane fade" id="other" role="tabpanel" aria-labelledby="other-tab">
                 <div class="col-md-6">
                     <div class="form-group">
                         <label>Nom d'utilisateur GitHub:</label>
