--- a/templates/settings.html
+++ b/templates/settings.html
@@ -5,6 +5,22 @@
 {% block content %}
 <div class="card shadow-lg p-4 mb-4 w-100">
     <h1 class="card-title">Paramètres</h1>
+    <!-- Flash messages block -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <div class="alert-container">
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
+    {% endwith %}
+    <!-- End of flash messages block -->
     <form method="POST">
         <ul class="nav nav-tabs" id="contactTabs" role="tablist">
             <li class="nav-item">
@@ -225,27 +241,29 @@
                 </div>
             </div>
             <div class="tab-pane fade" id="other" role="tabpanel" aria-labelledby="other-tab">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label>Nom d'utilisateur GitHub:</label>
-                        <input type="text" class="form-control" name="github_username" value="{{ contacts.github_username }}">
+                <div class="row mt-3">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Nom d'utilisateur GitHub:</label>
+                            <input type="text" class="form-control" name="github_username" value="{{ contacts.github_username }}">
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label>Token GitHub:</label>
-                        <input type="password" class="form-control" name="github_token" value="{{ contacts.github_token }}">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Token GitHub:</label>
+                            <input type="password" class="form-control" name="github_token" value="{{ contacts.github_token }}">
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label>Mode test:</label>
                     <input type="checkbox" class="form-control" name="test_mode" {% if contacts.test_mode %}checked{% endif %}>
                 </div>
+                <div class="form-group">
+                    <label for="admin_password">Nouveau mot de passe admin:</label>
+                    <input type="password" class="form-control" id="admin_password" name="admin_password">
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="admin_password">Nouveau mot de passe admin:</label>
-            <input type="password" class="form-control" id="admin_password" name="admin_password">
         </div>
         <button type="submit" class="btn btn-primary mt-3">Enregistrer</button>
     </form>
