--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,9 @@
                     <a class="nav-link" href="{{ url_for('deployments') }}">Déploiements</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('jobs') }}">Travaux</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('settings') }}">Paramètres</a>
                 </li>
             </ul>
