--- a/templates/editor.html
+++ b/templates/editor.html
@@ -22,6 +22,10 @@
             <label for="content">Contenu</label>
             <textarea class="form-control" id="content" name="content" rows="5" required></textarea>
         </div>
+        <div class="form-group">
+            <label for="featured_image">Image à la une</label>
+            <input type="file" class="form-control-file" id="featured_image" name="featured_image" accept="image/*">
+        </div>
         <button type="submit" class="btn btn-primary" id="submitButton">Publier</button>
     </form>
 </div>
