--- a/templates/editor.html
+++ b/templates/editor.html
@@ -19,12 +19,12 @@
             <input type="text" class="form-control" id="title" name="title" required>
         </div>
         <div class="form-group">
-            <label for="content">Contenu</label>
-            <textarea class="form-control" id="content" name="content" rows="5" required></textarea>
+            <label for="featured_image">Image à la une</label>
+            <input type="file" class="form-control" id="featured_image" name="featured_image" accept="image/*">
         </div>
         <div class="form-group">
-            <label for="featured_image">Image à la une</label>
-            <input type="file" class="form-control-file" id="featured_image" name="featured_image" accept="image/*">
+            <label for="content">Contenu</label>
+            <textarea class="form-control" id="content" name="content" rows="5" required></textarea>
         </div>
         <button type="submit" class="btn btn-primary" id="submitButton">Publier</button>
     </form>
