--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('settings') }}">Paramètres</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('logout') }}">Déconnexion</a>
+                </li>
             </ul>
         </div>
     </nav>
