--- a/templates/editor.html
+++ b/templates/editor.html
@@ -85,7 +85,7 @@
 
             $.ajax({
                 type: 'POST',
-                url: '{{ url_for("editor") }}',
+                url: '{{ url_for("editor.editor") }}',
                 data: formData,
                 processData: false,
                 contentType: false,
