--- a/templates/base.html
+++ b/templates/base.html
@@ -10,29 +10,29 @@
 <body>
     {% if current_user.is_authenticated %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-        <a class="navbar-brand" href="{{ url_for('index') }}">WP Deploy</a>
+        <a class="navbar-brand" href="{{ url_for('site_management.index') }}">WP Deploy</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Basculer la navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('add_domain') }}">Ajouter un domaine</a>
+                    <a class="nav-link" href="{{ url_for('site_management.add_domain') }}">Ajouter un domaine</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('editor') }}">Rédiger un article</a>
+                    <a class="nav-link" href="{{ url_for('editor.editor') }}">Rédiger un article</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('deployments') }}">Déploiements</a>
+                    <a class="nav-link" href="{{ url_for('deployment.deployments') }}">Déploiements</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('jobs') }}">Travaux</a>
+                    <a class="nav-link" href="{{ url_for('site_management.jobs') }}">Travaux</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('settings') }}">Paramètres</a>
+                    <a class="nav-link" href="{{ url_for('settings.settings') }}">Paramètres</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('logout') }}">Déconnexion</a>
+                    <a class="nav-link" href="{{ url_for('auth.logout') }}">Déconnexion</a>
                 </li>
             </ul>
         </div>
