--- a/templates/settings.html
+++ b/templates/settings.html
@@ -251,17 +251,23 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <label>Token GitHub:</label>
-                            <input type="password" class="form-control" name="github_token" value="{{ contacts.github_token }}">
+                            <input type="text" class="form-control" name="github_token" value="{{ contacts.github_token }}">
                         </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label>Token Internet.bs:</label>
-                    <input type="text" class="form-control" name="internetbs_token" value="{{ contacts.internetbs_token }}">
-                </div>
-                <div class="form-group">
-                    <label>Mot de passe Internet.bs:</label>
-                    <input type="password" class="form-control" name="internetbs_password" value="{{ contacts.internetbs_password }}">
+                <div class="row mt-3">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Token Internet.bs:</label>
+                            <input type="text" class="form-control" name="internetbs_token" value="{{ contacts.internetbs_token }}">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Mot de passe Internet.bs:</label>
+                            <input type="text" class="form-control" name="internetbs_password" value="{{ contacts.internetbs_password }}">
+                        </div>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label>Email de l'administrateur WordPress:</label>
