--- a/templates/add_domain.html
+++ b/templates/add_domain.html
@@ -10,7 +10,7 @@
             <label for="domain">Nom de domaine</label>
             <input type="text" class="form-control" id="domain" name="domain" required>
         </div>
-        <button type="submit" class="btn btn-primary" id="submitButton">Ajouter</button>
+        <button type="submit" class="btn btn-primary" id="submitButton">Achat via Internet.bs</button>
     </form>
 </div>
 <div id="messages"></div>
