--- a/templates/add_domain.html
+++ b/templates/add_domain.html
@@ -115,6 +115,7 @@
     ];
 
     let currentStepIndex = 0;
+    let processStopped = false; // Added processStopped variable
 
     document.getElementById('domainForm').addEventListener('submit', function(event) {
         event.preventDefault();
@@ -123,10 +124,15 @@
         var submitButton = document.getElementById('submitButton');
         submitButton.disabled = true;
         currentStepIndex = 0;
+        processStopped = false; // Reset the processStopped flag
         executeNextStep(domain);
     });
 
     function executeNextStep(domain) {
+        if (processStopped) {
+            console.log('Process stopped due to an error.');
+            return;
+        }
         if (currentStepIndex < steps.length) {
             console.log(`Executing step: ${steps[currentStepIndex].name}`);
             steps[currentStepIndex].func(domain);
@@ -277,6 +283,7 @@
         messages.insertBefore(message, messages.firstChild);
         document.getElementById('submitButton').disabled = false;
         currentStepIndex = 0;
+        processStopped = true; // Stop the process on error
     }
 
     document.getElementById('submitButton').addEventListener('click', function() {
